Remove temp fix fo misaligned upload progress bar in files

--- a/core/css/core/_server.scss
+++ b/core/css/core/_server.scss
@@ -633,18 +633,14 @@ ul.multiselectoptions {
 
 /* Upload Progress ---------------------------------------------------------- */
 
-#uploadprogresswrapper {
+#uploadprogresswrapper #uploadprogressbar {
 
-	#uploadprogressbar {
+	.label.outer, .label.inner {
+		color: $foreground-normal;
+	}
 
-		.label.outer, .label.inner {
-			color: $foreground-normal;
-		}
-
-		.ui-progressbar-value.ui-widget-header.ui-corner-left {
-			background-color: $background-active-hover;
-			top: 1px; // Temp fix for disaligned progressbar
-		}
+	.ui-progressbar-value.ui-widget-header.ui-corner-left {
+		background-color: $background-active-hover;
 	}
 }
 
