--- a/core/css/server.css
+++ b/core/css/server.css
@@ -1551,7 +1551,6 @@ ul.multiselectoptions.down {
 }
 #uploadprogresswrapper #uploadprogressbar .ui-progressbar-value.ui-widget-header.ui-corner-left {
   background-color: rgba(61, 174, 233, 0.25);
-  top: 1px;
 }
 
 /* UI Widget ---------------------------------------------------------------- */
